# VimasCalibration

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: four_head_rig.yaml
docs/: fisheye_intrinsics_workflow.md  workflow.md
scripts/: calibrate_camera.py  calibrate_rig.py  capture_camera.py  export_rig_yaml.py  generate_charuco.py  generate_chessboard.py  kalibr_docker.sh  kalibr_pass_rate.py  list_cameras.py  make_camera_dirs.py  tile_a4_artwork.py
src/fourhead_intrinsics/: __init__.py  calibration.py  io.py  metrics.py  quality.py  rig.py  video.py  visualization.py
